Use word break to fix overflow of KotOR same-gender romance mods FAQ

--- a/src/assets/css/utility.css
+++ b/src/assets/css/utility.css
@@ -1,6 +1,7 @@
 /* UTILITY CLASSES */
 .bold-text { font-weight: 700; }
 .center-text { text-align: center; }
+.break-word { word-break: break-word; }
 
 .center-el {
     display: grid;
